tests/semantic_errors/gajdosik2_3.tl
require "ifj21"
--navyse end
global name : function (integer) : string, string, string
function name    (a : integer, a : integer) : string, string, string end

function main()
    local id : integer = 102
                while 1 do
                    local num : id = 89
                end
            end


end
main()